--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -30,7 +30,7 @@
 
     <div id="header">
         <!--div id="logo"><?php echo CHtml::encode(Yii::app()->name); ?></div-->
-        <img src="/site/images/site/logo.png" alt="Logo" width="950"/>
+        <img src="${params/siteUrl}/images/site/logo.png" alt="Logo" width="950"/>
 
     </div><!-- header -->
 
