--- a/site/css/main.css
+++ b/site/css/main.css
@@ -46,7 +46,7 @@ body
 	width: 100%;
 }
 
-.slide .slide-right{
+.slide-right, #main-sidebar{
 	height: 350px;
 	width: 320px;
 /*	background: #000000;*/
@@ -56,14 +56,15 @@ body
 	left: 10px;
 }
 
-.slide .slide-right .news-place{
+
+.news-place{
 	padding: 0;
 	margin: 0;
 	height: 180px;
 	position: relative;
 }
 
-.slide-right .title-global {
+.title-global {
 	position: relative;
 	margin-bottom: 10px;
 	font-weight: bold;
@@ -94,13 +95,13 @@ body
 	bottom: 2px;
 }
 
-.slide .slide-right .news-place .news-name a{
+ .news-place .news-name a{
 	font-size: 15px;
 	color: #111;
 	font-weight: bold;
 }
 
-.slide .slide-right .news-place .news-image{
+.news-place .news-image{
 	font-size: 16px;
 	color: #111;
 	font-weight: bold;
@@ -110,7 +111,7 @@ body
 	margin-right: 5px;
 }
 
-.slide .slide-right .news-place .news-desc{
+.news-place .news-desc{
 	font-size: 16px;
 	color: #111;
 	margin-top: -3px;
@@ -121,11 +122,22 @@ body
 }
 
 
+#main-content
+{
+	padding-top: 20px;
+	clear: both;
+	width: 1160px;
+	position: relative;
+}
 
 #content
 {
     padding: 20px;
-	clear: both;
+	padding-top: 0;
+	left: 10px;
+	position: relative;
+	float: left;
+	width: 840px;
 }
 
 #sidebar
@@ -241,8 +253,14 @@ div.view
 
 div.breadcrumbs
 {
-	font-size: 0.9em;
+	font-size: 1.2em;
 	padding: 5px 20px;
+	width: 100%;
+}
+
+div.breadcrumbs a:first-child:before {
+	content: url('/site/images/site/icon_top.png');
+	padding-right: 5px;
 }
 
 div.breadcrumbs span
