--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -114,12 +114,29 @@
 
         </div>
 
+
     </div>
 
+    <div id="main-content">
+        <tal:block tal:content="structure php:this.widget('zii.widgets.CBreadcrumbs',array('links'=>this.breadcrumbs),true)"/>
+        <tal:block tal:content="structure content"/>
+        <div id="main-sidebar">
+            <div class="news-place">
+                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Tin tức nổi bật</h3></div>
+                <div class="content">
+                    <div class="news-name">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong năm tháng cuối năm">Bất động sản có hy vọng trong năm tháng cuối năm</a>
+                    </div>
+                    <div class="news-image">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong 5 tháng cuối năm"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" class="img-responsive" alt="Bất động sản có hy vọng trong 5 tháng cuối năm"/></a>
+                    </div>
+                    <div class="news-desc">
+                        Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...					</div>
 
-
-
-    <tal:block tal:content="structure content"/>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="clear"></div>
 
