--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -121,7 +121,7 @@
         <tal:block tal:content="structure php:this.widget('zii.widgets.CBreadcrumbs',array('links'=>this.breadcrumbs),true)"/>
         <tal:block tal:content="structure content"/>
         <div id="main-sidebar">
-            <div class="news-place">
+            <div class="box-item-sidebar">
                 <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Tin tức nổi bật</h3></div>
                 <div class="content">
                     <div class="news-name">
