--- a/site/css/main.css
+++ b/site/css/main.css
@@ -57,11 +57,17 @@ body
 }
 
 
-.news-place{
+.news-place, .box-item-sidebar{
 	padding: 0;
 	margin: 0;
 	height: 180px;
 	position: relative;
+}
+
+#main-sidebar {
+	padding: 0;
+	width: 310px;
+	border: 1px solid #d6d6d6;
 }
 
 .title-global {
@@ -95,13 +101,13 @@ body
 	bottom: 2px;
 }
 
- .news-place .news-name a{
+ .news-place .news-name a, .box-item-sidebar .news-name a{
 	font-size: 15px;
 	color: #111;
 	font-weight: bold;
 }
 
-.news-place .news-image{
+.news-place .news-image, .box-item-sidebar .news-image{
 	font-size: 16px;
 	color: #111;
 	font-weight: bold;
@@ -111,7 +117,7 @@ body
 	margin-right: 5px;
 }
 
-.news-place .news-desc{
+.news-place .news-desc, .box-item-sidebar .news-desc{
 	font-size: 16px;
 	color: #111;
 	margin-top: -3px;
