--- a/site/css/main.css
+++ b/site/css/main.css
@@ -47,7 +47,6 @@ body
 }
 
 .slide-right, #main-sidebar{
-	height: 350px;
 	width: 320px;
 /*	background: #000000;*/
 	float: left;
@@ -56,18 +55,25 @@ body
 	left: 10px;
 }
 
+.slide-right {
+	height: 350px;
+}
+
 
 .news-place, .box-item-sidebar{
 	padding: 0;
 	margin: 0;
-	height: 180px;
 	position: relative;
+}
+
+.news-place {
+	height: 180px;
 }
 
 #main-sidebar {
 	padding: 0;
 	width: 310px;
-	border: 1px solid #d6d6d6;
+	/*border: 1px solid #d6d6d6;*/
 }
 
 .title-global {
@@ -149,6 +155,7 @@ body
 #sidebar
 {
 	padding: 20px 20px 20px 0;
+	height:auto;
 }
 
 #footer
