--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -87,7 +87,7 @@
 
 
             <div class="project-place">
-                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Dự án nổi bật</h3></div>
+                <div class="title-global icon"><h3>Dự án tiêu biểu</h3></div>
                 <div class="content">
                     <div id='coin-slider'>
                         <a href="${params/siteUrl}/images/upload/3088083.jpg">
@@ -122,8 +122,15 @@
         <tal:block tal:content="structure content"/>
         <div id="main-sidebar">
             <div class="box-item-sidebar">
-                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Tin tức nổi bật</h3></div>
+                <div class="title-global icon"  style="margin-bottom: 0;"><h3>Video giới thiệu</h3></div>
                 <div class="content">
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/QXo8O7EKaHc" frameborder="0" allowfullscreen=""></iframe>
+                </div>
+            </div>
+
+            <div class="box-item-sidebar">
+                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Dự án  nổi bật</h3></div>
+                <div class="content" style="clear: both;">
                     <div class="news-name">
                         <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong năm tháng cuối năm">Bất động sản có hy vọng trong năm tháng cuối năm</a>
                     </div>
@@ -134,7 +141,50 @@
                         Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...					</div>
 
                 </div>
+
+                <div class="content" style="clear: both;">
+                    <div class="news-name">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong năm tháng cuối năm">Bất động sản có hy vọng trong năm tháng cuối năm</a>
+                    </div>
+                    <div class="news-image">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong 5 tháng cuối năm"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" class="img-responsive" alt="Bất động sản có hy vọng trong 5 tháng cuối năm"/></a>
+                    </div>
+                    <div class="news-desc">
+                        Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...					</div>
+
+                </div>
+
+                <div class="content" style="clear: both;">
+                    <div class="news-name">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong năm tháng cuối năm">Bất động sản có hy vọng trong năm tháng cuối năm</a>
+                    </div>
+                    <div class="news-image">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong 5 tháng cuối năm"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" class="img-responsive" alt="Bất động sản có hy vọng trong 5 tháng cuối năm"/></a>
+                    </div>
+                    <div class="news-desc">
+                        Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...					</div>
+
+                </div>
+
             </div>
+
+            <div class="box-item-sidebar" style="clear: both;">
+                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Hỗ trợ trực tuyến</h3></div>
+                <div class="content" style="clear: both;">
+                    <div class="news-name">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong năm tháng cuối năm">Bất động sản có hy vọng trong năm tháng cuối năm</a>
+                    </div>
+                    <div class="news-image">
+                        <a href="tin-tuc/169/bat-dong-san-co-hy-vong-trong-5-thang-cuoi-nam.html" title="Bất động sản có hy vọng trong 5 tháng cuối năm"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" class="img-responsive" alt="Bất động sản có hy vọng trong 5 tháng cuối năm"/></a>
+                    </div>
+                    <div class="news-desc">
+                        Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...Theo các chuyên gia, vẫn có tia hy vọng cho bất động sản những tháng cuối năm nhất là ...					</div>
+
+                </div>
+
+
+            </div>
+
         </div>
     </div>
 
