--- a/site/css/main.css
+++ b/site/css/main.css
@@ -72,7 +72,7 @@ body
 
 #main-sidebar {
 	padding: 0;
-	width: 310px;
+	width: 300px;
 	/*border: 1px solid #d6d6d6;*/
 }
 
@@ -138,7 +138,7 @@ body
 {
 	padding-top: 20px;
 	clear: both;
-	width: 1160px;
+	width: 1170px;
 	position: relative;
 }
 
@@ -149,7 +149,7 @@ body
 	left: 10px;
 	position: relative;
 	float: left;
-	width: 840px;
+	width: 850px;
 }
 
 #sidebar
@@ -164,8 +164,25 @@ body
 	/*margin: 10px 20px;*/
 	font-size: 0.8em;
 	height: 162px;
-	text-align: center;
+	/*text-align: center;*/
 	border-top: 1px solid #C9E0ED;
+}
+
+.l-footer{
+	width: 690px;
+	float: left;
+	position: relative;
+	margin-left: 20px;
+	margin-top: 25px;
+}
+
+.r-footer{
+	width: 440px;
+	position: relative;
+	font-size: 14px;
+	float: right;
+	margin-top: 59px;
+	margin-right: 10px;
 }
 
 #logo
