--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -30,7 +30,7 @@
 
     <div id="header">
         <!--div id="logo"><?php echo CHtml::encode(Yii::app()->name); ?></div-->
-        <img src="${params/siteUrl}/images/site/logo.png" alt="Logo" width="950"/>
+        <img src="${params/siteUrl}/images/site/logo.png" alt="Logo" style="width: 100%;"/>
 
     </div><!-- header -->
 
@@ -186,6 +186,47 @@
         </div>
     </div>
 
+    <div id="slide-footer">
+        <h2 class="home-title">Dự án đang bán</h2>
+        <div id="carousel">
+            <div class="item-slide">
+                <a href="#"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" /></a>
+                <h3>Căn hộ The Vista An Phú</h3>
+                <p>
+                    Vị trí: Xa Lộ Hà Nội, An Phú- Quận 2 - TP. Hồ Chí Minh
+                </p>
+            </div>
+            <div class="item-slide">
+                <a href="#"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" /></a>
+                <h3>Căn hộ The Vista An Phú</h3>
+                <p>
+                    Vị trí: Xa Lộ Hà Nội, An Phú- Quận 2 - TP. Hồ Chí Minh
+                </p>
+            </div>
+            <div class="item-slide">
+                <a href="#"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" /></a>
+                <h3>Căn hộ The Vista An Phú</h3>
+                <p>
+                    Vị trí: Xa Lộ Hà Nội, An Phú- Quận 2 - TP. Hồ Chí Minh
+                </p>
+            </div>
+            <div class="item-slide">
+                <a href="#"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" /></a>
+                <h3>Căn hộ The Vista An Phú</h3>
+                <p>
+                    Vị trí: Xa Lộ Hà Nội, An Phú- Quận 2 - TP. Hồ Chí Minh
+                </p>
+            </div>
+            <div class="item-slide">
+                <a href="#"><img src="${params/siteUrl}/images/upload/08835070_400x300.jpg" /></a>
+                <h3>Căn hộ The Vista An Phú</h3>
+                <p>
+                    Vị trí: Xa Lộ Hà Nội, An Phú- Quận 2 - TP. Hồ Chí Minh
+                </p>
+            </div>
+        </div>
+    </div>
+
     <div class="clear"></div>
 
     <div id="footer" style="background: url('${params/siteUrl}/images/site/footer.jpg'); position: relative; top: 60px; margin-top: 60px;">
@@ -227,6 +268,37 @@
         $('#coin-slider').coinslider({ width: 320, height:200, navigation: false, delay: 2000,effect: 'random' });
     });
 </script>
+
+<!--carouFredSel-->
+<script src="${params/siteUrl}/js/jquery.carouFredSel-6.2.1.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        // Using default configuration
+        $('#carousel').carouFredSel({
+            width   :   "100%",
+            items   :   5,
+            scroll : {
+                items           : 1,
+                duration        : 500
+            }
+        });
+
+        // Using custom configuration
+//        $('#carousel').carouFredSel({
+//            items               : 2,
+//            direction           : "up",
+//            scroll : {
+//                items           : 1,
+//                easing          : "elastic",
+//                duration        : 1000,
+//                pauseOnHover    : true
+//            }
+//        });
+    });
+</script>
+
+
 
 <!-- Bootstrap Core JavaScript -->
 <script src="${params/siteUrl}/js/bootstrap.min.js"></script>
