--- a/site/protected/views/content/index.html
+++ b/site/protected/views/content/index.html
@@ -1,1 +1,153 @@
-<h3>BDS An Thạnh</h3>
+<div>
+    <h2 class="home-title" style="margin-left: 15px;">sàn giao dịch</h2>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
+
+<div class="top-news">
+    <div class="top-item">
+        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <div class="top-img">
+            <a><img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/></a>
+        </div>
+        <div class="top-info">
+            <h3> Đăng bởi admin lúc 18-12-2014</h3>
+            <p>Giao nhà thô hoặc giao nhà hoàn thiện cơ bản hoặc giao nhà hoàn thiện đầy đủ Tùy theo nhu cầu của khách hàng</p>
+            <h4>Vị trí: Quận 2 - Hồ Chí Minh</h4>
+            <h4>Giá: <span>1.3 tỷ/m2</span> - TDT: <span>100 m2</span></h4>
+        </div>
+    </div>
+</div>
