--- a/site/css/main.css
+++ b/site/css/main.css
@@ -140,17 +140,16 @@ body
 	clear: both;
 	width: 100%;
 	padding-top: 20px;
-	min-height: 1200px;
 }
 
 #content
 {
-    padding: 20px;
+    padding: 10px;
 	padding-top: 0;
-	left: 10px;
+	padding-left: 20px;
 	position: relative;
 	float: left;
-	width: 850px;
+	width: 865px;
 }
 
 #sidebar
@@ -177,22 +176,31 @@ body
 #silde-footer .home-title{
 	display: block;
 	padding: 5px 20px;
+	margin-left: 25px;
 }
 
 
 #carousel {
 	width: 1168px;
-	height: 175px;
+	height: 130px;
 	overflow: hidden;
 }
 
 .item-slide{
 	width: 365px;
 	padding: 10px;
-	height: 200px;
 	overflow: hidden;
 	display: block;
 	float: left;
+	border-bottom: 1px solid #CCC;
+	border-top: 1px solid #CCC;
+	height: 120px;
+	margin-left: 10px;
+	box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
+}
+
+.item-slide:first-child{
+	margin-left: 25px;
 }
 
 .item-slide a img{
@@ -200,6 +208,8 @@ body
 	height: 90px;
 	display: block;
 	float: left;
+	border: 1px solid #CCC;
+	box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
 }
 
 .item-slide h3 {
@@ -224,6 +234,75 @@ body
 	padding: 0px;
 	padding-left: 10px;
 	overflow: hidden;
+}
+
+.top-news{
+	width: 405px;
+	border-bottom: 1px solid #CCC;
+	border-top: 1px solid #CCC;
+	height: 185px;
+	box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
+	float: left;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+
+.top-item{
+	margin: 0;
+	padding: 0;
+}
+
+.top-img{
+	margin-left: 10px;
+	float: left;
+	overflow: hidden;
+}
+
+.top-img img{
+	width: 120px;
+	border: 1px solid #CCC;
+	box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
+}
+
+.top-info{
+	margin-left: 10px;
+	width: 255px;
+	float: left;
+	height: 200px;
+	overflow: hidden;
+}
+
+.top-info p {
+	font-size: 14px;
+	width: 100%;;
+	height: 60px;
+	overflow: hidden;
+}
+
+.top-info h4{
+	font-size: 15px;
+	font-weight: 600;
+	overflow: hidden;
+}
+
+.top-info h4 span{
+	color: #ff0000;
+}
+
+.top-info h3{
+	font-size: 13px;
+	font-style: italic;
+	margin-top: 0px;
+	margin-bottom: 5px;
+	overflow: hidden;
+	color: #;
+}
+
+.top-item h2 {
+	font-size: 18px;
+	font-weight: 700;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 #footer
