--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -233,19 +233,19 @@
     <div id="footer" style="background: url('${params/siteUrl}/images/site/footer.jpg'); position: relative; top: 15px; ">
         <div class="l-footer">
             <span style="font-size: 16px;">
-                <a target="_blank" href="http://www.youtube.com/everlandvn" title="Kênh Youtube Địa Ốc EVERLAND"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/youtube.png"/></a>
+                <a target="_blank" href="http://www.youtube.com/everlandvn" title="Kênh Youtube An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/youtube.png"/></a>
                 <a target="_blank" href="https://twitter.com/everlandvn"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/Twitter.png"/></a>
-                <a target="_blank" href="http://www.facebook.com/everlandvn.vn" title="Facebook Địa Ốc EVERLAND"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/fb.png"/></a><br/>
-                Trụ sở chính: 168 đường Xô Viết Nghệ Tĩnh, Phường 21, Quận Bình Thạnh, TP.HCM<br/>
-                Tel: (08) 38404 355 - Fax: (08) 38404 667 - Email: info@everlandvn.vn<br/>
-                Hotline: Mr Trị 0936 000 515<br/>
+                <a target="_blank" href="http://www.facebook.com/everlandvn.vn" title="Facebook An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/fb.png"/></a><br/>
+                Trụ sở chính: 495 Man Thiện Tăng Nhơn Phú A, Quận 9, TP Hồ Chí Minh<br/>
+                Tel: (08) 6278 9911 - Fax: (08) 6278 9911 - Email: anthanhreal@gmail.com<br/>
+                Hotline: Mr Diệp 0913565671<br/>
             </span>
         </div>
 
         <div class="r-footer">
 
-            <p>Bản quyền © 2013 thuộc về CÔNG TY TNHH DV ĐỊA ỐC EVERLAND</p>
-            <p>Designed by <a href="http://muabandiaoc.vn">NguyenGia</a>
+            <p>Bản quyền © 2015 thuộc về CÔNG TY TNHH DT & PT XÂY DỰNG AN THANH</p>
+            <p>Designed by <a href="http://www.facebook.com/coolkg1412">ErisNguyen</a>
         </p><p></p>
 
 
