--- a/admin/protected/views/site/index.html
+++ b/admin/protected/views/site/index.html
@@ -1,1 +1,1 @@
-<h3>CMSページへようこそ、左側のメニューに管理機能を選択して下さい。</h3>
+<h3 style="margin-left: 10px;">Chào mừng bạn đến trang CMS, chọn chức năng quản lý trên menu bên trái.</h3>
