--- a/site/protected/views/content/index.html
+++ b/site/protected/views/content/index.html
@@ -4,9 +4,9 @@
 
 <div class="top-news">
     <div class="top-item">
-        <h2 class="text-left"><a>Diamond Island căn hộ đẳng cấp </a></h2>
+        <h2 class="text-left"><a href="content/view">Diamond Island căn hộ đẳng cấp </a></h2>
         <div class="top-img">
-            <img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/>
+            <a href="content/view"><img src="${params/siteUrl}/images/upload/3088081.jpg" alt=""/></a>
         </div>
         <div class="top-info">
             <h3> Đăng bởi admin lúc 18-12-2014</h3>
