--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="language" content="en"/>
     <meta name='viewport' content='width=1190'/>
+    <link rel="icon" type="image/png" href="${params/siteUrl}/images/site/favicon.png"/>
 
     <!-- CSS framework -->
     <link rel="stylesheet" type="text/css" href="<?php echo Yii::app()->request->baseUrl; ?>/css/screen.css" media="screen, projection"/>
@@ -171,14 +172,14 @@
             </div>
 
             <div class="box-item-sidebar" style="clear: both; top: 50px; ">
-                <div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Hỗ trợ trực tuyến</h3></div>
+                <!--<div class="title-global icon"><img src="${params/siteUrl}/images/site/new.gif"/><h3>Hỗ trợ trực tuyến</h3></div>-->
                 <div class="content" style="clear: both;">
                     <div>
                         <img src="${params/siteUrl}/images/site/hotline.png" alt="Hotline"/>
                     </div>
-                    <div style="position: relative; text-align: center; width: 100%; margin-left: auto; margin-right: auto;">
-                        <img src="${params/siteUrl}/images/site/skype.png" alt="skype" width="40"/>
-                        <span style="font-size: 19px; padding-left: 5px;"><a href="skype:asv-nguyenchihieu?call" style="text-decoration: none;">asv-nguyenchihieu</a></span>
+                    <div style="position: relative; height: 81px; text-align: center; width: 201px; margin-left: auto; margin-right: auto; background: url('${params/siteUrl}/images/site/skype-hotline.png') no-repeat;">
+                        <!--<img src="${params/siteUrl}/images/site/skype.png" alt="skype" width="40"/>-->
+                        <span style="font-size: 19px; padding-left: 5px;"><a href="skype:asv-nguyenchihieu?call" style="text-decoration: none; margin-top: 15px; display: block; margin-left: auto; margin-right: auto; color: white;">asv-nguyenchihieu</a></span>
                     </div>
                 </div>
             </div>
