--- a/admin/protected/modules/projects/views/default/breadcrumb.html
+++ b/admin/protected/modules/projects/views/default/breadcrumb.html
@@ -1,14 +1,14 @@
-<nav id="topicPath" metal:define-macro="index">
+<nav id="topicPath" metal:define-macro="search">
     <ul>
         <li class="top"><a href="/admin/">Home</a></li>
         <li>Quản lí dựa án</li>
     </ul>
 </nav>
-<nav id="topicPath" metal:define-macro="search">
+<nav id="topicPath" metal:define-macro="index">
     <ul>
         <li class="top"><a href="/admin/">Home</a></li>
         <li ><a href="/admin/project/">Danh sách dự án</a></li>
-        <li>Timf kiếm</li>
+        <li>Tìm kiếm</li>
     </ul>
 </nav>
 <nav id="topicPath" metal:define-macro="view">
