--- a/admin/protected/modules/projects/views/default/edit.html
+++ b/admin/protected/modules/projects/views/default/edit.html
@@ -64,8 +64,8 @@
         <div class="optionsHolder">
             <div tab="belongTo_box1">
                 <select name="project[status]"   style="width: 100%">
-                    <option value="1" tal:attributes="selected php:contentProject['status'] EQ 1 ? 'selected' : '' ">Đang tiến hành</option>
-                    <option value="0" tal:attributes="selected php:contentProject['status'] EQ 0 ? 'selected' : '' ">Đã hoàn thành</option>
+                    <option value="-1" tal:attributes="selected php:contentProject['status'] EQ '-1' ? 'selected' : '' ">Đang tiến hành</option>
+                    <option value="1" tal:attributes="selected php:contentProject['status'] EQ '1' ? 'selected' : '' ">Đã hoàn thành</option>
                 </select>
             </div>
         </div>
