--- a/admin/protected/widgets/views/menu.html
+++ b/admin/protected/widgets/views/menu.html
@@ -6,11 +6,11 @@
     </ul>
 </section>
 
-<section tal:condition="php: user['is_super'] EQ 1">
+<section>
     <h2>Quản lí tin đăng</h2>
     <ul>
-        <li><a href="/contents">Danh sách</a></li>
-        <li><a href="/contents/edit">Thêm tin</a></li>
+        <li><a href="/admin/message">Danh sách</a></li>
+        <li><a href="/admin/message/edit">Thêm tin</a></li>
     </ul>
 </section>
 
